--- a/karting/index.html
+++ b/karting/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>KBRT Telemetry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="автоспорт, тайминг, гонки, телеметрия">
+    <meta name="description" content="PWA с частной телеметрией картинг центров для подразделений KBRT">
 
-    <link rel="stylesheet" href="css/outlines.css">
+    <!--    <link rel="stylesheet" href="css/outlines.css">-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -30,25 +32,25 @@
                 <th>Kart number</th>
             </tr>
             <tr>
-                <th>Place</th>
+                <th>Laps</th>
                 <th>Team name</th>
                 <th>Team name</th>
                 <th>Team name</th>
             </tr>
             <tr>
-                <td>Lap 1</td>
+                <td>1</td>
                 <td>Time</td>
                 <td>Time</td>
                 <td>Time</td>
             </tr>
             <tr>
-                <td>Lap 2</td>
+                <td>2</td>
                 <td>Time</td>
                 <td>Time</td>
                 <td>Time</td>
             </tr>
             <tr>
-                <td>Lap 3</td>
+                <td>3</td>
                 <td>Time</td>
                 <td>Time</td>
                 <td>Time</td>
@@ -79,7 +81,7 @@ ________(__)_____________(__)____
 </main>
 
 <footer>
-    <p><q>If you're no longer go for a gap, you're not a racer anymore</q> <sup>&#169; Ayrton Senna</sup></p>
+    <p><q>if you no longer go for a gap you are no longer a racing driver</q> <sup>&#169; Ayrton Senna</sup></p>
 </footer>
 
 </body>
