--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
             </div>
         </div>
     </div>
+    <div id="load-info"></div>
 </div>
 
 <script src="script/script.js"></script>
