--- a/index.html
+++ b/index.html
@@ -51,39 +51,6 @@
                     <div class="grid-header">Pits</div>
                     <div class="grid-header">Int</div>
                     <div class="grid-header">G/L</div>
-
-                    <div class="grid-item">27</div>
-                    <div class="grid-item">1</div>
-                    <div class="grid-item">Пилот 1</div>
-                    <div class="grid-item">1:25.678</div>
-                    <div class="grid-item">1:23.456</div>
-                    <div class="grid-item">1:26.234</div>
-                    <div class="grid-item">15</div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">+2.345</div>
-                    <div class="grid-item">1</div>
-
-                    <div class="grid-item">52</div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">Пилот 2</div>
-                    <div class="grid-item">1:26.789</div>
-                    <div class="grid-item">1:24.000</div>
-                    <div class="grid-item">1:27.123</div>
-                    <div class="grid-item">14</div>
-                    <div class="grid-item">1</div>
-                    <div class="grid-item">+4.567</div>
-                    <div class="grid-item">-1</div>
-
-                    <div class="grid-item">11</div>
-                    <div class="grid-item">3</div>
-                    <div class="grid-item">Пилот 3</div>
-                    <div class="grid-item">1:27.890</div>
-                    <div class="grid-item">1:25.500</div>
-                    <div class="grid-item">1:28.345</div>
-                    <div class="grid-item">13</div>
-                    <div class="grid-item">0</div>
-                    <div class="grid-item">+6.789</div>
-                    <div class="grid-item">0</div>
                 </div>
             </div>
 
@@ -116,6 +83,22 @@
                 </div>
             </div>
         </div>
+        <div class="form-wrapper">
+            <h3>Add/Update Driver</h3>
+            <form id="lap-time-form">
+                <label for="driver-name">Driver Name:</label>
+                <input type="text" id="driver-name" required>
+                <label for="driver-number">Number:</label>
+                <input type="number" id="driver-number" required>
+                <label for="lap-time">Lap Time (MM:SS.sss):</label>
+                <input type="text" id="lap-time" required>
+                <button type="submit">Add/Update Driver</button>
+            </form>
+        </div>
+        <div class="button-wrapper">
+            <button id="clear-table">Clear Table</button>
+        </div>
+        </div>
     </div>
 
     <div id="lap-log-page" class="page">
@@ -131,16 +114,6 @@
                 <div class="grid-item">1</div>
                 <div class="grid-item">1:19.231</div>
                 <div class="grid-item">0</div>
-
-                <div class="grid-item">27</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">1:20.003</div>
-                <div class="grid-item">+0.772</div>
-
-                <div class="grid-item">27</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">1.19.331</div>
-                <div class="grid-item">+0.100</div>
             </div>
         </section>
     </div>
@@ -161,147 +134,6 @@
                         <div class="grid-item">KBRT</div>
                         <div class="grid-item rocket"></div>
                         <div class="grid-item"></div>
-
-                        <div class="grid-item">11</div>
-                        <div class="grid-item">Griphunters</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item rocket"></div>
-
-                        <div class="grid-item">11</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">3</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">10</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">4</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">19</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">4</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">27</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">7</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">4</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">15</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">15</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">15</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">23</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">15</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">6</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">17</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">2</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">4</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">15</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">22</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item garbage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">27</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">21</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">14</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">2</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item average"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">22</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">12</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item subaverage"></div>
-                        <div class="grid-item"></div>
-
-                        <div class="grid-item">4</div>
-                        <div class="grid-item">KBRT</div>
-                        <div class="grid-item rocket"></div>
-                        <div class="grid-item"></div>
-
                     </div>
                 </section>
             </div>
@@ -319,8 +151,6 @@
             </div>
         </div>
     </div>
-    <div id="load-info"></div>
-</div>
 
 <script src="script/script.js"></script>
 </body>
