--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#" id="live-timing-tab" class="active">Live timing</a></li>
-                <li><a href="#" id="lap-log-tab">Lap log</a></li>
+                <li><a href="#" id="lap-log-tab">LAB-6 Page</a></li>
                 <li><a href="#" id="pitstop-tab">Pit-stop</a></li>
             </ul>
         </nav>
@@ -102,20 +102,11 @@
     </div>
 
     <div id="lap-log-page" class="page">
-        <!-- Табличка Lap Time Log -->
-        <section class="lap-time-log">
-            <div class="lap-log-grid">
-                <div class="grid-header">№</div>
-                <div class="grid-header">Lap</div>
-                <div class="grid-header">Time</div>
-                <div class="grid-header">Delta</div>
-
-                <div class="grid-item">27</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">1:19.231</div>
-                <div class="grid-item">0</div>
-            </div>
-        </section>
+        <h1>Комментарии о гонке</h1>
+        <h4>Коммы как в ВК, ботиками делаются)</h4>
+        <div class="preloader">Загрузка...</div>
+        <div id="content"></div>
+        <script src="./script/promises.js"></script>
     </div>
 
     <!-- Страница пит-стопа -->
